@@ -9,4 +9,4 @@ copyright_year   = 2009
 [FakeRelease]
 [MyTestArchiver]
 [Git::Commit]
-dirty_dir = releases
+add_files_in = releases
